Project simple_bank {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Bank Database
  '''
}

Table users {
  username varchar [pk]
  hashed_password varchar [not null]
  fullname varchar [not null]
  email varchar [unique, not null]
  password_change_at timestamptz [not null, default: '0001-01-01 00-00-00Z']
  created_at timestamptz [not null, default: 'now()']
}

Table accounts {
  id bigserial [pk]
  owner varchar [ref: > users.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]


  indexes {
    (owner, currency) [unique]
  }
}


Table entries {
  id bigserial [pk]
  accounts_id bigint [ref: > accounts.id]
  amount bigint [not null, note: 'can be negative or positive']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    accounts_id
  }
}

Table transfers {
  id bigserial [pk]
  from_account_id bigint [ref: > accounts.id]
  to_account_id bigint [ref: > accounts.id]
  amount bigint [not null, note: 'it must be positive']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    from_account_id
    to_account_id
    (from_account_id, to_account_id)
  }
 }
